k8s/app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  labels:
    app: app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v2
  template:
    metadata:
      labels:
        app: app
        version: v2
    spec:
      containers:
        - name: app
          image: ghcr.io/remla25-team11/app:latest
          ports:
            - containerPort: 80
