k8s/model-service-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
      version: v3
  template:
    metadata:
      labels:
        app: model-service
        version: v3
    spec:
      containers:
      - name: model-service
        image: ghcr.io/remla25-team11/model-service:latest
        ports:
        - containerPort: 8000
