k8s/app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  labels:
    app: app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
        - name: app
          image: ghcr.io/remla25-team11/app:v1.2.3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
