k8s/model-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
      version: v1
  template:
    metadata:
      labels:
        app: model-service
        version: v1
    spec:
      containers:
      - name: model-service
        image: ghcr.io/remla25-team11/model-service:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
