k8s/destination-rule-model.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: model-service
spec:
  host: model-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v3
    labels:
      version: v3
