k8s/virtual-service-app.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: app-service
            port:
              number: 5000

    - match:
        - uri:
            prefix: /
          headers:
            user:
              exact: test-user
      route:
        - destination:
            host: app.default.svc.cluster.local
            subset: v2

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: app.default.svc.cluster.local
            subset: v1
